--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "saithink/think-validate",
+    "name": "zanjs/think-validate",
     "description": "think validate",
     "license": "Apache-2.0",
     "authors": [
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "topthink/think-container":"~2.0"
+        "php": ">=8.1.0",
+        "topthink/think-container":"~3.0"
     },
     "autoload": {
         "psr-4": {
